5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3161/executions/1590_2894.log
== TEST (2019-04-07 11:46:57) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
V = float(input("Qual o valor unitario do jogo? "))
frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = (v+frete)

# Impressao do valor total:
print=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (v+frete)
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:47:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
V = float(input("Qual o valor unitario do jogo? "))
frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = (V+frete)

# Impressao do valor total:
print=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (v+frete)
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:47:23) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
V = float(input("Qual o valor unitario do jogo? "))
frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = (V+frete)

# Impressao do valor total:
print=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (v+frete)
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:49:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
V1 = float(input("Qual o valor unitario do jogo? "))
V2 = float(input("valor do jogo 2: "))
V3= float(input("valor do jogo 3: "))
v4= float(input("valor do jogo 4:"))
frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = (V+frete)

# Impressao do valor total:
print=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    V2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:50:01) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
V1 = float(input("Qual o valor unitario do jogo? "))
V2 = float(input("valor do jogo 2: "))
V3= float(input("valor do jogo 3: "))
v4= float(input("valor do jogo 4:"))
frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = (V1+V2+V3+V4+frete)

# Impressao do valor total:
print=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    V2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:50:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
V1 = float(input("Qual o valor unitario do jogo? "))
V2 = float(input("valor do jogo 2: "))
V3= float(input("valor do jogo 3: "))
v4= float(input("valor do jogo 4:"))
frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = (V1+V2+V3+V4+frete)

# Impressao do valor total:
print=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    V2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:50:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
V1 = float(input("Qual o valor unitario do jogo? "))
V2 = float(input("valor do jogo 2: "))
V3= float(input("valor do jogo 3: "))
v4= float(input("valor do jogo 4:"))
frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = (V1+V2+V3+V4+frete)

# Impressao do valor total:
print=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    V2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:50:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
V1 = float(input("Qual o valor unitario do jogo? "))
V2 = float(input("valor do jogo 2: "))
V3= float(input("valor do jogo 3: "))
V4= float(input("valor do jogo 4:"))
frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = (V1+V2+V3+V4+frete)

# Impressao do valor total:
print=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    V2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
